# advent-of-code

./: .gitignore
2021/rust/: Cargo.toml
2021/rust/day04/: Cargo.toml
2021/rust/day05/: Cargo.toml
2021/rust/day09/: Cargo.toml
2021/rust/day12/: Cargo.toml
2021/rust/day13/: Cargo.toml
2021/rust/day17/: Cargo.toml
2021/rust/day18/: Cargo.toml
2021/rust/day19/: Cargo.toml
2021/rust/day20/: Cargo.toml
2021/rust/day22/: Cargo.toml
2021/rust/src/: main.rs
2021/rust/util/: Cargo.toml
2022/rust/: Cargo.toml
2022/rust/day04/: Cargo.toml
2022/rust/day07/: Cargo.toml
2023/rust/: Cargo.toml
2024/rust/: Cargo.toml  flake.nix
2024/rust/util/: Cargo.toml
2024/rust/util/proptest-regressions/: lib.txt
2024/rust/util/src/: lib.rs
2025/rust/: Cargo.toml  Makefile  flake.nix
2025/rust/.claude/: settings.local.json
2025/rust/day01/: Cargo.toml
2025/rust/day01/src/: lib.rs
2025/rust/day02/: Cargo.toml
2025/rust/day02/src/: lib.rs
2025/rust/day03/: Cargo.toml
2025/rust/day03/src/: lib.rs
2025/rust/day04/: Cargo.toml
2025/rust/day04/src/: lib.rs
2025/rust/day05/: Cargo.toml
2025/rust/day05/src/: lib.rs
2025/rust/day06/: Cargo.toml
2025/rust/day06/src/: lib.rs
2025/rust/day07/: Cargo.toml
2025/rust/day07/src/: lib.rs
2025/rust/day08/: Cargo.toml
2025/rust/day08/src/: lib.rs
2025/rust/day09/: Cargo.toml
2025/rust/day09/src/: lib.rs
2025/rust/day10/: Cargo.toml
2025/rust/day10/src/: lib.rs
2025/rust/day11/: Cargo.toml
2025/rust/day11/src/: lib.rs
2025/rust/parser/: Cargo.toml
2025/rust/parser/src/: lib.rs
2025/rust/src/: main.rs  test.rs
2025/rust/util/: Cargo.toml
2025/rust/util/src/: lib.rs
rust/: .gitignore  Cargo.toml
rust-template/: Cargo.toml  cargo-generate.toml  pre-script.rhai
rust-template/src/: lib.rs
rust/day06/: Cargo.toml
rust/day07/: Cargo.toml
rust/day08/: Cargo.toml
rust/day14/: Cargo.toml
rust/day16/: Cargo.toml
rust/day17/: Cargo.toml
rust/day21/: Cargo.toml
rust/src/: day01.rs  day02.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  lib.rs  main.rs  module.rs  parser.rs  util.rs
rust/tests/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs
(+269 files in other folders)
