[package]
edition = "2024"
name = "aoc"
version = "0.1.0"

[profile.dev]
split-debuginfo = "unpacked"

[dependencies.day01]
path = "./day01"

[dependencies.day02]
path = "./day02"

[dependencies.day03]
path = "./day03"

[dependencies.util]
path = "./util"

[workspace]
members = [
    "day01",
    "day02",
    "day03",
    "parser",
    "util",
]
