[package]
edition = "2024"
name = "aoc"
version = "0.1.0"

[dependencies.day01]
path = "./day01"

[dependencies.day02]
path = "./day02"

[dependencies.day03]
path = "./day03"

[dependencies.day04]
path = "./day04"

[dependencies.day05]
path = "./day05"

[dependencies.day06]
path = "./day06"

[dependencies.day07]
path = "./day07"

[dependencies.day08]
path = "./day08"

[dependencies.day09]
path = "./day09"

[dependencies.day10]
path = "./day10"

[dependencies.day11]
path = "./day11"

[dependencies.util]
path = "./util"

[workspace]
members = [
    "day01",
    "day02",
    "day03",
    "day04",
    "day05",
    "day06",
    "day07",
    "day08",
    "day09",
    "day10",
    "day11",
    "parser",
    "util",
]

[profile.dev]
split-debuginfo = "unpacked"
