[package]
name = "util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "2.3.1", features = ["cookies"] }
chrono = "0.4"
chrono-tz = "0.10"
num-format = "0.4.0"
paste = "1.0.14"
num-traits = "0.2.17"
